target bar color

--- a/project/bookkeeping/templates/bookkeeping/includes/chart_month_targets.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_month_targets.html
@@ -107,10 +107,11 @@
             marker: {
                 symbol: 'c-rect',
                 lineWidth: 2,
-                lineColor: Highcharts.getOptions().colors[1],
+                lineColor: 'grey',
                 radius: 13,
             },
-        }]
+        }
+    ]
     });
 });
 </script>
