--- a/project/bookkeeping/templates/bookkeeping/includes/chart_month_targets.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_month_targets.html
@@ -114,22 +114,20 @@
                 var r = 'red';
                 var g = 'green';
 
-                console.log(point)
+                if (y <= max) {
+                    point.dataLabel.css({color: 'green' })
 
-                if (y > max) {
+                    point.color = g;
+                    point.graphic.attr({ fill: g });
+                }
+                else {
                     var p = 28;
                     if (y < 100) { p = 21; }
-                        point.dataLabel.attr({ x: point.dataLabel.x + p});
-                        point.dataLabel.css({color: '#b4010d' })
+                    point.dataLabel.attr({ x: point.dataLabel.x + p });
+                    point.dataLabel.css({color: '#b4010d' })
 
-                        point.color = r;
-                        point.graphic.attr({ fill: r });
-                    }
-                    else {
-                        point.dataLabel.css({color: 'green' })
-
-                        point.color = g;
-                        point.graphic.attr({ fill: g });
+                    point.color = r;
+                    point.graphic.attr({ fill: r });
                 }
             });
         });
