--- a/project/bookkeeping/templates/bookkeeping/includes/chart_month_targets.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_month_targets.html
@@ -114,14 +114,14 @@
                 max = parseFloat(max.toFixed(1));
                 y = parseFloat(y.toFixed(1));
 
-                var r = 'red';
-                var g = 'green';
+                var red = 'red';
+                var green = 'green';
 
                 if (y <= max) {
                     point.dataLabel.css({color: 'green' })
 
-                    point.color = g;
-                    point.graphic.attr({ fill: g });
+                    point.color = green;
+                    point.graphic.attr({ fill: green });
                 }
                 else {
                     var p = 28;
@@ -131,8 +131,8 @@
                     point.dataLabel.attr({ x: point.dataLabel.x + p });
                     point.dataLabel.css({color: '#b4010d' })
 
-                    point.color = r;
-                    point.graphic.attr({ fill: r });
+                    point.color = red;
+                    point.graphic.attr({ fill: red });
                 }
             });
         });
