--- a/project/bookkeeping/templates/bookkeeping/includes/chart_month_targets.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_month_targets.html
@@ -114,29 +114,32 @@
                 max = parseFloat(max.toFixed(1));
                 y = parseFloat(y.toFixed(1));
 
-                var red = 'red';
-                var green = 'green';
-                var yellow = '#ffcc00';
-
                 if (y <= max) {
-                    point.dataLabel.css({color: 'green' })
+                    var clr = 'green';
 
-                    point.color = green;
-                    point.graphic.attr({ fill: green });
+                    point.dataLabel.css({color: clr })
+
+                    point.color = clr;
+                    point.graphic.attr({ fill: clr });
                 }
                 else {
                     var p = 28;
                     if (y < 100) { p = 21; }
                     if (y < 10) { p = -2; }
 
+                    var clr_bar = 'red';
+                    var clr_label = '#b4010d';
+
+                    if(y <= max * 1.1) {
+                        clr_bar = '#ffcc00';
+                        clr_label = '#efbf00';
+                    }
+
                     point.dataLabel.attr({ x: point.dataLabel.x + p });
-                    point.dataLabel.css({color: '#b4010d' })
+                    point.dataLabel.css({color: clr_label })
 
-                    var clr = red;
-                    if(y <= max * 1.1) { clr = yellow; }
-
-                    point.color = clr;
-                    point.graphic.attr({ fill: clr });
+                    point.color = clr_bar;
+                    point.graphic.attr({ fill: clr_bar });
                 }
             });
         });
