--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -42,17 +42,27 @@
     </div>
 
     <div class="col-lg-2">
-        <!-- Average Incomes -->
-        <div id="avg_incomes">{{ avg_incomes }}</div>
+        <div class="row">
+            <div class="col-lg-12 col-md-3">
+                <!-- Average Incomes -->
+                <div id="avg_incomes">{{ avg_incomes }}</div>
+            </div>
 
-        <!-- Average Expenses -->
-        <div id="avg_expenses">{{ avg_expenses }}</div>
+            <div class="col-lg-12 col-md-3">
+                <!-- Average Expenses -->
+                <div id="avg_expenses">{{ avg_expenses }}</div>
+            </div>
 
-        <!-- Money -->
-        <div id="money">{{ money }}</div>
+            <div class="col-lg-12 col-md-3">
+                <!-- Money -->
+                <div id="money">{{ money }}</div>
+            </div>
 
-        <!-- Worth -->
-        <div id="wealth">{{ wealth }}</div>
+            <div class="col-lg-12 col-md-3">
+                <!-- Worth -->
+                <div id="wealth">{{ wealth }}</div>
+            </div>
+        </div>
     </div>
 </div>
 
