drinks information tables on medium devices

--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -36,10 +36,10 @@
 <div class="row mt-2">
     <div class="col-lg-6">
         <div class="row px-3">
-            <div id="tbl_consumsion" class="col-lg-3 px-1">{{ tbl_consumsion }}</div>
-            <div id="tbl_last_day" class="col-lg-4 px-1">{{ tbl_last_day }}</div>
-            <div id="tbl_alcohol" class="col-lg-2 px-1">{{ tbl_alcohol }}</div>
-            <div id="drinks-target-content" class="col-lg-3 px-1">{{ target_list }}</div>
+            <div id="tbl_consumsion" class="col-lg-3 col-md-3 px-1">{{ tbl_consumsion }}</div>
+            <div id="tbl_last_day" class="col-lg-4 col-md-3 px-1">{{ tbl_last_day }}</div>
+            <div id="tbl_alcohol" class="col-lg-2 col-md-3 px-1">{{ tbl_alcohol }}</div>
+            <div id="drinks-target-content" class="col-lg-3 col-md-3 px-1">{{ target_list }}</div>
         </div>
 
         <div class="row px-3">
