--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -37,8 +37,14 @@
 <div class="row mt-2">
     <div id="accounts_worth" class="col-lg-7">{{ accounts }}</div>
     <div class="col-lg-3">
-        <div>{{ year_balance_short }}</div>
-        <div id="no_incomes">{{ no_incomes }}</div>
+        <div class="row">
+            <div class="col-lg-12 col-md-6">
+                <div>{{ year_balance_short }}</div>
+            </div>
+            <div class="col-lg-12 col-md-6">
+                <div id="no_incomes">{{ no_incomes }}</div>
+            </div>
+        </div>
     </div>
 
     <div class="col-lg-2">
