renamed nights to counts

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -69,8 +69,8 @@
               href="{% url 'drinks:drinks_index' %}">Gėrimai</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if '/nights/' in request.path %}active{% endif %}"
-              href="{% url 'nights:nights_index' %}">Naktys</a>
+            <a class="nav-link {% if '/counts/' in request.path %}active{% endif %}"
+              href="{% url 'counts:counts_index' %}">Kiek</a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if '/plans/' in request.path %}active{% endif %}"
