--- a/project/drinks/templates/drinks/includes/drinks_target_list.html
+++ b/project/drinks/templates/drinks/includes/drinks_target_list.html
@@ -1,16 +1,19 @@
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
-        <tr class="top-text"><th colspan="2">Dienos riba</th></tr>
+        <tr class="top-text"><th colspan="3">Max per dieną</th></tr>
         <tr class="top">
-            <th class="text-right" colspan="2">Max per dieną</th>
+            <th class="text-right">ml</th>
+            <th class="text-right">vnt</th>
+            <th class="text-right"></th>
         </tr>
     </thead>
     <tfoot>
         {% for item in items %}
         {% url 'drinks:drinks_target_update' item.id as url_update %}
         <tr data-url="{{ url_update }}" class="dblclick">
-            <td width="38rem" style="border-right: 0!important;"><button type="button" data-url="{{ url_update }}" class="btn btn-super-sm btn-outline-info js-create">Edit</button></td>
             <td style="border-left: 0!important;">{{ item.quantity }}</td>
+            <td>{{ max_bottles|floatformat:0 }}</td>
+            <td width="38rem"><button type="button" data-url="{{ url_update }}" class="btn btn-super-sm btn-outline-info js-create">Edit</button></td>
         </tr>
         {% empty %}
         <tr><td colspan="2">Neįvestas tikslas</td></tr>
