disabled tooltip in readed books chart

--- a/project/books/templates/books/includes/chart_readed_books.html
+++ b/project/books/templates/books/includes/chart_readed_books.html
@@ -45,13 +45,7 @@
             enabled: false
         },
         tooltip: {
-            shared: true,
-            headerFormat: '',
-            pointFormat: '<b>{point.y:.0f}</b>',
-            style: {
-                fontSize: '12px',
-                fontFamily: 'Calibri, Verdana',
-            }
+            enabled: false,
         },
         plotOptions: {
             bar: {
