chart calendar labels vertical  position

--- a/project/counts/templates/counts/includes/chart_calendar.html
+++ b/project/counts/templates/counts/includes/chart_calendar.html
@@ -19,9 +19,7 @@ Highcharts.chart('clander_{{ id }}_container', {
                     this.renderer.text(
                             s.name,
                             bbox.x + this.plotLeft + bbox.width / 2,
-                            bbox.y - this.plotTop - 40
-                            // bbox.x + this.plotLeft + bbox.width / 2,
-                            // bbox.y + this.plotTop - 10
+                            bbox.height + 20
                         )
                         .attr({
                             align: 'center'
