--- a/project/expenses/templates/expenses/includes/expenses_form.html
+++ b/project/expenses/templates/expenses/includes/expenses_form.html
@@ -15,6 +15,22 @@
         margin-left: 0;
         text-align: right;
     }
+    #div_id_exception {
+        padding: 0.5rem 0 0 0;
+        text-align: left;
+    }
+    label[for=attachment-clear_id] {
+        padding-top: .25rem;
+    }
+    .form-control.d-flex {
+        padding: 0 .25rem;
+        padding-right: 5px;
+        margin: 0;
+    }
+    .text-break {
+        margin-top: auto;
+        margin-bottom: auto;
+    }
 </style>
 
 
