x axis label aligned to right

--- a/project/counts/templates/counts/includes/chart_periodicity.html
+++ b/project/counts/templates/counts/includes/chart_periodicity.html
@@ -25,7 +25,7 @@
                     fontFamily: 'Calibri, Verdana',
                 },
                 formatter: function () {//use formatter to break word.
-                    return '<div align="right" style="word-wrap: break-word;word-break: break-all;width:40px">' + this.value + '</div>';
+                    return '<div style="word-wrap: break-word; word-break:break-all; width:40px; text-align: right">' + this.value + '</div>';
                 },
                 rotation: -45,
             }
