--- a/project/counts/templates/counts/includes/chart_periodicity.html
+++ b/project/counts/templates/counts/includes/chart_periodicity.html
@@ -64,6 +64,20 @@
             data: {{ data|safe }},
             color: 'rgba({{ chart_column_color }}, 0.65)',
             borderColor: 'rgba({{ chart_column_color }}, 1)',
+            dataLabels: {
+                enabled: true,
+                rotation: 0,
+                color: 'rgba({{ chart_column_color }}, 1)',
+                formatter: function () {
+                    return (this.y != 0) ? this.y : "";
+                },
+                style: {
+                    fontSize: '9px',
+                    fontWeight: 'bold',
+                    fontFamily: 'Verdana, sans-serif',
+                    textOutline: false
+                }
+            }
         }]
     });
 });
