--- a/project/bookkeeping/templates/bookkeeping/includes/no_incomes.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/no_incomes.html
@@ -1,7 +1,7 @@
 <table class="table table-striped table-hover table-sm stats">
     <thead>
         <tr class="top">
-            <th data-toggle="tooltip" data-html="true" data-placement="right" title="<p>Nebūtinos išlaidos, kurių galima atsisakyti:<br />{% for i in not_use %}- {{ i }}<br />{% endfor %}" style="border-left: 5px solid red!important;" class="text-left">{{ save_sum|floatformat:0 }}</th>
+            <th data-toggle="tooltip" data-html="true" data-placement="right" title="<p>Nebūtinos išlaidos, kurių galima atsisakyti:<br />{% for i in not_use %}- {{ i }}<br />{% endfor %}</p>" style="border-left: 5px solid red!important;" class="text-left">{{ save_sum|floatformat:0 }}</th>
             <th class="text-right">€ + F</th>
             <th class="text-right">€ + F + P</th>
         </tr>
