BooksTarget views and tests

--- a/project/static/css/app_global.css
+++ b/project/static/css/app_global.css
@@ -209,3 +209,7 @@ tr.top-text, tr.top-text th {
     max-width: 650px!important;
     margin: auto;
 }
+
+.no-hover:hover {
+    text-decoration: none!important;
+  }
