--- a/project/books/templates/books/includes/info_row.html
+++ b/project/books/templates/books/includes/info_row.html
@@ -1,4 +1,5 @@
 <div class="info_row">
-    <span>Perskaitytos: </span> <h6 class="mr-3">{{ readed|floatformat:0 }}</h6>
-    <span>Skaitomos: </span> <h6 class="mr-3">{{ reading|floatformat:0 }}</h6>
+    <span>Perskaitytos: </span> <h6 class="mr-3 ml-1">{{ readed|floatformat:0 }}</h6>
+    <span>Skaitomos: </span> <h6 class="mr-3 ml-1">{{ reading|floatformat:0 }}</h6>
+    {% if target %}<span>Tikslas: </span><h6 class="mr-3 ml-1"><a type="button" data-url="{% url 'books:books_target_update' target.id %}" class="js-create no-hover">{{ target.quantity }}</a></h6>{% endif %}
 </div>
