--- a/project/books/templates/books/index.html
+++ b/project/books/templates/books/index.html
@@ -19,7 +19,9 @@
 
     <div class="col-2 text-right">
         {% url 'books:books_new' as url_books %}
+        {% url 'books:books_target_new' as url_books_target %}
         <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_books }}"><i class="fas fa-plus"></i> Knygą</button>
+        <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_books_target }}"><i class="fas fa-plus"></i> {{ year|title }} metų tikslą</button>
     </div>
 </div>
 
