drinks consumsion history tooltips split=true

--- a/project/drinks/templates/drinks/includes/chart_consumsion_history.html
+++ b/project/drinks/templates/drinks/includes/chart_consumsion_history.html
@@ -63,11 +63,12 @@
             }
         },
         tooltip: {
-            formatter: function() {
-                var point = this.point
-                return `<b>${this.series.name}<b><br/>
-                       ${this.x}  ${point.y.toFixed(0)}ml`
-                }
+            split: true,
+            pointFormat: '<b>{series.name}</b>: {point.y:,.0f}ml',
+            style: {
+                fontSize: '13px',
+                fontFamily: 'Calibri, Verdana',
+            },
         },
         credits: {
             enabled: false
