--- a/project/drinks/templates/drinks/includes/chart_consumsion_history.html
+++ b/project/drinks/templates/drinks/includes/chart_consumsion_history.html
@@ -63,8 +63,9 @@
             }
         },
         tooltip: {
-            split: true,
-            pointFormat: '<b>{series.name}</b>: {point.y:,.0f}ml',
+            shared: true,
+            crosshairs: true,
+            pointFormat: '<span style="color: {series.color}"><b>{series.name}</b>:</span> {point.y:,.0f}ml<br>',
             style: {
                 fontSize: '13px',
                 fontFamily: 'Calibri, Verdana',
