css styles moved from local template to app_global.css file

--- a/project/static/css/app_global.css
+++ b/project/static/css/app_global.css
@@ -213,3 +213,11 @@ tr.top-text, tr.top-text th {
 .no-hover:hover {
     text-decoration: none!important;
   }
+
+.stats .no-left-border {
+    border-left: 0!important;
+}
+
+.stats .no-right-border {
+    border-right: 0!important;
+}
