--- a/project/expenses/templates/expenses/includes/expenses_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_list.html
@@ -12,12 +12,15 @@
             <th width="260rem">Pastaba</th>
             <th width="70rem" class="text-right">Prisegtukas</th>
             <th class="text-right">Sąskaita</th>
-            <th width="45rem"></th>
+            <th width="35rem" class="no-right-border"></th>
+            <th width="25rem" class="no-left-border no-right-border"></th>
+            <th width="1px" class="no-left-border no-right-border"></th>
         </tr>
     </thead>
     <tbody>
         {% for item in items %}
         {% url 'expenses:expenses_update' item.id as url_update %}
+        {% url 'expenses:expenses_delete' item.id as url_delete %}
         {% ifchanged item.date|date:"F" %}<tr>{% if not forloop.first %}<td colspan="9" class="row-spacer"></td>{% endif %}</tr>{% endifchanged %}
         <tr data-url="{{ url_update }}" class="{{ item.expense_type.pk|bg_color }} dblclick">
             <td class="text-left">{{ item.date|date:"Y-m-d" }}</td>
@@ -28,11 +31,17 @@
             <td class="text-left">{{ item.remark|linebreaksbr }}</td>
             <td>{% if item.attachment %}<a href="{{ item.attachment.url }}" target="_blank">Žiūrėti</a>{% endif %}</td>
             <td>{{ item.account }}</td>
-            <td class="text-center" {%if item.exception %} style="border-right: 5px solid red!important;"{% endif %}><a type="button" data-url="{{ url_update }}" class="btn btn-super-sm btn-outline-info js-create">Edit</a></td>
+            <td class="no-right-border">
+                <a type="button" data-url="{{ url_update }}" class="text-center js-create edit" title="Edit"><i class="bi bi-pencil-fill"></i></a>
+                </td>
+                <td class="text-center no-left-border no-right-border">
+                    <a type="button" data-url="{{ url_delete }}" class="js-delete trash" title="Delete"><i class="bi bi-trash-fill"></i></a>
+                </td>
+            <td class="no-left-border" {%if item.exception %} style="background-color: red!important;"{% endif %}></td>
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
-            <td colspan="9" class="py-2"><b>{% if notice %}{{ notice }}{% else %}{{ request.user.year|title }}</b> metais išlaidų nėra.{% endif %}</td>
+            <td colspan="11" class="py-2"><b>{% if notice %}{{ notice }}{% else %}{{ request.user.year|title }}</b> metais išlaidų nėra.{% endif %}</td>
         </tr>
         {% endfor %}
     </tbody>
