--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -23,7 +23,7 @@
                 <button id="13" type="button" data-url="{% url 'expenses:expenses_list' %}" class="btn btn-sm btn-month js-filter ml-2">Visi įrašai</button>
             </div>
             <div class="col-sm-2 text-right">
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expense_new }}"><i class="fas fa-plus"></i> Išlaidas</button>
+                <button type="button" class="btn btn-sm btn-outline-success pr-2 js-create" data-url="{{ url_expense_new }}"><i class="bi bi-plus"></i>Išlaidas</button>
             </div>
         </div>
         <div id="search_form_data" class="mt-3 mb-2">{{ search }}</div>
@@ -33,8 +33,8 @@
     <div class="col-lg-4 px-1">
         <div class="row my-2">
             <div class="col text-right">
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_type_new }}"><i class="fas fa-plus"></i> Išlaidų rūšį</button>
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_name_new }}"><i class="fas fa-plus"></i> Išlaidų pavadinimą</button>
+                <button type="button" class="btn btn-sm btn-outline-success pr-2 js-create" data-url="{{ url_expenses_type_new }}"><i class="bi bi-plus"></i>Išlaidų rūšį</button>
+                <button type="button" class="btn btn-sm btn-outline-success pr-2 js-create" data-url="{{ url_expenses_name_new }}"><i class="bi bi-plus"></i>Išlaidų pavadinimą</button>
             </div>
         </div>
 
