--- a/project/transactions/templates/transactions/includes/savings_close_list.html
+++ b/project/transactions/templates/transactions/includes/savings_close_list.html
@@ -1,3 +1,3 @@
 {% load table %}
 
-{% table 'transactions:savings_close_update' fees=True %}
+{% table 'transactions:savings_close_update' 'transactions:savings_close_delete' fees=True %}
