--- a/project/transactions/templates/transactions/includes/table.html
+++ b/project/transactions/templates/transactions/includes/table.html
@@ -6,25 +6,32 @@
             <th>Į sąskaitą</th>
             <th class="text-right">Suma</th>
             {% if fees %}<th class="text-right">Mokesčiai</th>{% endif %}
-            <th width="45rem"></th>
+            <th width="35rem" class="no-right-border"></th>
+            <th width="35rem" class="no-left-border"></th>
         </tr>
     </thead>
     <tbody>
         {% for item in items %}
-        {% url url_name item.id as url %}
+        {% url url_update item.id as url_update %}
+        {% url url_delete item.id as url_delete %}
         {% ifchanged item.date|date:"F" %}<tr>{% if not forloop.first %}<td colspan="6" class="row-spacer"></td>{% endif %}</tr>
         {% endifchanged %}
-        <tr data-url="{{ url }}" class="dblclick">
+        <tr data-url="{{ url_update }}" class="dblclick">
             <td class="text-left">{{ item.date|date:"Y-m-d" }}</td>
             <td class="text-left">{{ item.from_account }}</td>
             <td class="text-left">{{ item.to_account }}</td>
             <td>{{ item.price }}</td>
             {% if fees %}<td>{{ item.fee }}</td>{% endif %}
-            <td class="text-center"><a type="button" data-url="{{ url }}" class="btn btn-super-sm btn-outline-info js-create">Edit</a></td>
+            <td class="no-right-border">
+                <a type="button" data-url="{{ url_update }}" class=" js-create edit" title="Edit"><i class="bi bi-pencil-fill"></i></a>
+            </td>
+            <td class="text-center no-left-border">
+                <a type="button" data-url="{{ url_delete }}" class="js-delete trash" title="Delete"><i class="bi bi-trash-fill"></i></a>
+            </td>
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
-            <td colspan="{% if fees %}6{% else %}5{% endif %}" class="py-2"><b>{{ year|default_if_none:'xxxx'|safe }}</b> metais įrašų nėra.</td>
+            <td colspan="{% if fees %}7{% else %}6{% endif %}" class="py-2"><b>{{ year|default_if_none:'xxxx'|safe }}</b> metais įrašų nėra.</td>
         </tr>
         {% endfor %}
     </tbody>
