--- a/project/transactions/templates/transactions/includes/transactions_list.html
+++ b/project/transactions/templates/transactions/includes/transactions_list.html
@@ -1,3 +1,3 @@
 {% load table %}
 
-{% table 'transactions:transactions_update' %}
+{% table 'transactions:transactions_update' 'transactions:transactions_delete' %}
