--- a/project/counts/templates/counts/includes/counts_list.html
+++ b/project/counts/templates/counts/includes/counts_list.html
@@ -1,24 +1,31 @@
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr class="top">
-            <th width="45%">Data</th>
-            <th width="45%">Kiekis</th>
-            <th width="5%"></th>
+            <th>Data</th>
+            <th>Kiekis</th>
+            <th width="35rem" class="no-right-border"></th>
+            <th width="35rem" class="no-left-border"></th>
         </tr>
     </thead>
     <tbody>
         {% for item in items %}
-        {% url url_update item.id as url %}
-        {% ifchanged item.date|date:"F" %}<tr>{% if not forloop.first %}<td colspan="3" class="row-spacer"></td>{% endif %}</tr>
+        {% url url_update item.id as url_upd %}
+        {% url url_delete item.id as url_dlt %}
+        {% ifchanged item.date|date:"F" %}<tr>{% if not forloop.first %}<td colspan="4" class="row-spacer"></td>{% endif %}</tr>
         {% endifchanged %}
         <tr data-url="{{ url }}" class="dblclick">
             <td class="text-left">{{ item.date|date:"Y-m-d" }}</td>
             <td class="text-left">{{ item.quantity }}</td>
-            <td class="text-center"><a type="button" data-url="{{ url }}" class="btn btn-super-sm btn-outline-info js-create">Edit</a></td>
+            <td class="text-center no-right-border">
+                <a type="button" data-url="{{ url_upd }}" class=" js-create edit" title="Edit"><i class="bi bi-pencil-fill"></i></a>
+            </td>
+            <td class="text-center no-left-border">
+                <a type="button" data-url="{{ url_dlt }}" class="js-delete trash" title="Delete"><i class="bi bi-trash-fill"></i></a>
+            </td>
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
-            <td colspan="3" class="py-2"><b>{{ request.user.year|title }}</b> metais įrašų nėra.</td>
+            <td colspan="4" class="py-2"><b>{{ request.user.year|title }}</b> metais įrašų nėra.</td>
         </tr>
         {% endfor %}
     </tbody>
