--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -23,8 +23,8 @@
     <div class="col text-right">
         {% url 'drinks:drinks_new' as url_drinks %}
         {% url 'drinks:drinks_target_new' as url_drinks_target %}
-        <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks }}"><i class="fas fa-plus"></i> Gertynės</button>
-        <button type="button" class="btn btn-sm btn-info js-create" data-url="{{ url_drinks_target }}"><i class="fas fa-plus"></i> Metų tikslas</button>
+        <button type="button" class="btn btn-sm btn-outline-success js-create pr-2" data-url="{{ url_drinks }}"><i class="bi bi-plus"></i> Gertynės</button>
+        <button type="button" class="btn btn-sm btn-info js-create pr-2" data-url="{{ url_drinks_target }}"><i class="bi bi-plus"></i> Metų tikslas</button>
     </div>
 </div>
 
