--- a/project/transactions/templates/transactions/index.html
+++ b/project/transactions/templates/transactions/index.html
@@ -14,7 +14,7 @@
             </div>
             <div class="col text-right">
                 {% url 'transactions:transactions_new' as url_transactions %}
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_transactions }}"><i class="fas fa-plus"></i> Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create pr-2" data-url="{{ url_transactions }}"><i class="bi bi-plus"></i> Įrašą</button>
             </div>
         </div>
         <div class="row mt-2">
@@ -28,7 +28,7 @@
             </div>
             <div class="col text-right">
                 {% url 'transactions:savings_close_new' as url_savings_close %}
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_close }}"><i class="fas fa-plus"></i> Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create pr-2" data-url="{{ url_savings_close }}"><i class="bi bi-plus"></i> Įrašą</button>
             </div>
         </div>
         <div class="row mt-2">
@@ -42,7 +42,7 @@
             </div>
             <div class="col text-right">
                 {% url 'transactions:savings_change_new' as url_savings_change %}
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_change }}"><i class="fas fa-plus"></i> Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create pr-2" data-url="{{ url_savings_change }}"><i class="bi bi-plus"></i> Įrašą</button>
             </div>
         </div>
         <div class="row mt-2">
@@ -58,7 +58,7 @@
             </div>
             <div class="col text-right">
                 {% url 'accounts:accounts_new' as url_accounts %}
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_accounts }}"><i class="fas fa-plus"></i> Sąskaitą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create pr-2" data-url="{{ url_accounts }}"><i class="bi bi-plus"></i> Sąskaitą</button>
             </div>
         </div>
         <div class="row mt-2">
