--- a/project/savings/templates/savings/index.html
+++ b/project/savings/templates/savings/index.html
@@ -15,7 +15,7 @@
         <!-- Funds -->
         <div class="row mt-2">
             <div class="col text-right">
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings }}"><i class="fas fa-plus"></i> Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create pr-2" data-url="{{ url_savings }}"><i class="bi bi-plus"></i> Įrašą</button>
             </div>
         </div>
         <div class="row mt-2">
@@ -25,7 +25,7 @@
         <!-- Pensions -->
         <div class="row mt-2">
             <div class="col text-right">
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_pensions }}"><i class="fas fa-plus"></i> Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create pr-2" data-url="{{ url_pensions }}"><i class="bi bi-plus"></i> Įrašą</button>
             </div>
         </div>
         <div class="row mt-2">
@@ -37,7 +37,7 @@
         <!-- Funds Types -->
         <div class="row mt-2">
             <div class="col text-right">
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_type_new }}"><i class="fas fa-plus"></i> Fondą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create pr-2" data-url="{{ url_savings_type_new }}"><i class="bi bi-plus"></i> Fondą</button>
             </div>
         </div>
         <div class="row mt-2">
@@ -48,7 +48,7 @@
         <!-- Pension Types -->
         <div class="row mt-4">
             <div class="col text-right">
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_pensions_type_new }}"><i class="fas fa-plus"></i> Pensijų fondą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create pr-2" data-url="{{ url_pensions_type_new }}"><i class="bi bi-plus"></i> Pensijų fondą</button>
             </div>
         </div>
         <div class="row mt-2">
