--- a/project/expenses/templates/expenses/includes/expenses_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_list.html
@@ -22,7 +22,7 @@
         {% url 'expenses:expenses_delete' item.id as url_delete %}
         {% ifchanged item.date|date:"F" %}<tr>{% if not forloop.first %}<td colspan="10" class="row-spacer"></td>{% endif %}</tr>{% endifchanged %}
         <tr data-url="{{ url_update }}" class="{{ item.expense_type.pk|bg_color }} dblclick">
-            <td class="text-left" {%if item.exception %} style="border-left: 5px solid red!important;"{% endif %}>{{ item.date|date:"Y-m-d" }}</td>
+            <td class="text-left {%if item.exception %}expense-exception"{% else %}expense-ordinary"{% endif %}>{{ item.date|date:"Y-m-d" }}</td>
             <td class="text-left">{{ item.expense_type }}</td>
             <td class="text-left">{{ item.expense_name }}</td>
             <td>{{ item.quantity }}</td>
@@ -63,6 +63,13 @@
     }
     .work {
         background-color: #fff0c1;
+    }
+    .stats tr > td.expense-ordinary {
+        padding-left:.5rem!important;
+    }
+    table.stats tr > td.expense-exception {
+        padding-left:.4rem!important;
+        border-left: 5px solid red!important;
     }
 </style>
 
