--- a/project/expenses/templates/expenses/includes/expenses_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_list.html
@@ -64,7 +64,7 @@
     .work {
         background-color: #fff0c1;
     }
-    .stats tr > td.expense-ordinary {
+    table.stats tr > td.expense-ordinary {
         padding-left:.5rem!important;
     }
     table.stats tr > td.expense-exception {
