--- a/project/static/css/app_global.css
+++ b/project/static/css/app_global.css
@@ -147,6 +147,7 @@ tr.top-text, tr.top-text th {
 .btn-menu {
     font-size: .7rem!important;
     color: #007bff;
+    padding: 0.1rem 0.25rem;
 }
 
 .btn-super-sm {
